fix: checkbox label spacing
OKTA-303139

--- a/assets/sass/v2/_forms.scss
+++ b/assets/sass/v2/_forms.scss
@@ -15,4 +15,11 @@
       margin-bottom: 1rem;
     }
   }
+
+  // Fixing OKTA-303139 here, making sure V1 stays the same.
+  .custom-checkbox {
+    label {
+      line-height: inherit;
+    }
+  }
 }
